[project]
name = "gap-jupyter"
version = "0.1.0"
description = "Jupyter Environment for GAP-System"
authors = [
    {name = "Haopin Wu", email = "psistwu@outlook.com"},
]
dependencies = [
    "gap-jupyter @ file:///${PROJECT_ROOT}/modules/JupyterKernel",
    "pip>=24.0",
    "jupyterlab>=4.1.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "jupyter lab"
_.env = {JUPYTER_GAP_EXECUTABLE = "gap", JUPYTER_CONFIG_DIR = "./.jupyter"}
